@@ -51,6 +51,7 @@ package com.openexchange.file.storage.json.services;
 
 import java.util.concurrent.atomic.AtomicReference;
 import org.osgi.service.event.EventAdmin;
+import com.openexchange.config.ConfigurationService;
 import com.openexchange.file.storage.composition.IDBasedFileAccessFactory;
 import com.openexchange.folderstorage.FolderService;
 import com.openexchange.groupware.attach.AttachmentBase;
@@ -73,6 +74,11 @@ public class Services {
      */
     public static void setServiceLookup(final ServiceLookup serviceLookup) {
         LOOKUP_REF.set(serviceLookup);
+    }
+
+    public static ConfigurationService getConfigurationService() {
+        final ServiceLookup lookup = LOOKUP_REF.get();
+        return null == lookup ? null : lookup.getService(ConfigurationService.class);
     }
 
     public static EventAdmin getEventAdmin() {
