@@ -2,3 +2,9 @@
 # If this value is not set or 0, the more general MAX_UPLOAD_SIZE configured in server.properties will be used. If that value
 # is also 0 or not set, uploads will be unrestricted. The size is in Bytes.
 MAX_UPLOAD_SIZE=10485760
+
+# Configures the used compression level that is applied to .zip containers 
+# when downloading multiple documents at once. Possible values are "-1" for
+# the built-in default level, "0" for no compression, or any number between 
+# "1" (best speed) and "9" (best compression). Defaults to "-1".   
+com.openexchange.infostore.zipDocumentsCompressionLevel=-1;
